data/playtesting/sim-reports/archive/v1.0-alpha.54/raport_telemetrii.md
[Strona główna](../../../../../README.md) > [v1.0-alpha.54](README.md) > [raport_telemetrii](raport_telemetrii.md)

---

# Raport Telemetrii i Szans Wygranych (Win Shares) dla Wszystkich 16 Setupów — Wersja Balansu: v1.0-alpha.54

**Wersja Balansu:** `v1.0-alpha.54` | **Data:** 2026-08-23 17:26 | **Wielkość Próby:** 1000 gier/setup (16000 gier łącznie) | **Czas Symulacji:** 4.74s

*Score* = legacy (win share + kara witalności w jednym wykładniku). *Balance* = tylko równość win share.

## 1. Tabela Szans Wygranych Frakcji (Win Share %) vs Punkt Idealny

| Setup | Gr. | Score | Balance | Ideal % | SO % | CAA % | KB % | KT % | GC % | Status Rozkładu Frakcji |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 3 | 🔴 ** 40.7** | 🟠 73.4 | 33.3% | - | 39.8% | - | 27.2% | 33.0% | 🔴 ODCHYLONY |
| `3p-cienie-korona-gildia` | 3 | 🔴 ** 40.6** | 🟠 69.7 | 33.3% | - | 25.2% | 36.4% | - | 38.4% | 🔴 ODCHYLONY |
| `3p-cienie-korona-kabala` | 3 | 🔴 **  5.9** | 🟢 99.2 | 33.3% | - | 33.3% | 33.7% | 33.0% | - | 🔴 ODCHYLONY |
| `3p-korona-kabala-gildia` | 3 | 🔴 ** 27.5** | 🔴 37.9 | 33.3% | - | - | 28.5% | 20.6% | 50.9% | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-gildia` | 3 | 🔴 **  1.3** | 🔴 9.5 | 33.3% | 69.1% | 23.2% | - | - | 7.7% | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-kabala` | 3 | 🔴 **  4.2** | 🔴 20.0 | 33.3% | 60.1% | 24.1% | - | 15.8% | - | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-korona` | 3 | 🔴 **  4.4** | 🔴 32.0 | 33.3% | 53.8% | 20.7% | 25.5% | - | - | 🔴 ODCHYLONY |
| `3p-oficjum-kabala-gildia` | 3 | 🔴 **  0.7** | 🔴 2.7 | 33.3% | 85.2% | - | - | 4.6% | 10.2% | 🔴 ODCHYLONY |
| `3p-oficjum-korona-gildia` | 3 | 🔴 **  3.6** | 🔴 11.8 | 33.3% | 67.0% | - | 21.3% | - | 11.7% | 🔴 ODCHYLONY |
| `3p-oficjum-korona-kabala` | 3 | 🔴 **  5.6** | 🔴 18.5 | 33.3% | 61.4% | - | 16.6% | 22.0% | - | 🔴 ODCHYLONY |
| `4p-core` | 4 | 🔴 ** 48.1** | 🟡 84.2 | 25.0% | 25.9% | 22.3% | 28.5% | 23.3% | - | 🔴 ODCHYLONY |
| `4p-no-cienie` | 4 | 🔴 ** 20.2** | 🟠 67.0 | 25.0% | 31.3% | - | 23.3% | 27.0% | 18.4% | 🔴 ODCHYLONY |
| `4p-no-kabala` | 4 | 🟠 ** 66.8** | 🟡 83.3 | 25.0% | 22.4% | 24.2% | 29.2% | - | 24.2% | 🟠 WYMAGA UWAGI |
| `4p-no-korona` | 4 | 🔴 ** 13.1** | 🟠 67.3 | 25.0% | 31.8% | 22.9% | - | 26.3% | 19.0% | 🔴 ODCHYLONY |
| `4p-no-oficjum` | 4 | 🔴 ** 47.9** | 🟠 65.3 | 25.0% | - | 23.0% | 33.4% | 23.3% | 20.3% | 🔴 ODCHYLONY |
| `5p-full` | 5 | 🔴 **  2.7** | 🔴 20.6 | 20.0% | 41.9% | 18.2% | 17.1% | 13.5% | 9.3% | 🔴 ODCHYLONY |

## 2. Pełna Tabela Telemetrii 5 Filarów Silnika Gry z Oceną Optymalności

| Setup | Średnia Er | Limit Er % (Deadlock) | Pas Biedy % (Złoto) | Autodafé / Partię | Oskarżenia / Partię | Śr. Złoto End | Śr. Herezja End | Globalny Status Telemetrii |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 6.27 🟢 | 0.0% 🟢 | 0.5% 🟢 | 1.15 🟢 | 5.96 🔴 | 10.12zł | 8.25 | 🟢 OPTYMALNA |
| `3p-cienie-korona-gildia` | 6.58 🟡 | 0.0% 🟢 | 5.5% 🟢 | 1.2 🟢 | 6.43 🔴 | 10.34zł | 8.99 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-cienie-korona-kabala` | 6.77 🟡 | 0.4% 🟢 | 6.5% 🟢 | 1.23 🟢 | 5.6 🔴 | 9.58zł | 7.82 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-korona-kabala-gildia` | 6.58 🟡 | 0.0% 🟢 | 7.3% 🟢 | 1.17 🟢 | 6.77 🔴 | 3.43zł | 9.04 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-oficjum-alandalus-gildia` | 5.34 🟢 | 0.0% 🟢 | 1.8% 🟢 | 1.47 🟢 | 5.18 🔴 | 9.46zł | 8.88 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-kabala` | 5.58 🟢 | 0.0% 🟢 | 2.0% 🟢 | 1.59 🟢 | 4.52 🟡 | 8.65zł | 8.4 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-korona` | 6.08 🟢 | 0.1% 🟢 | 6.6% 🟢 | 1.69 🟢 | 5.45 🔴 | 9.02zł | 8.85 | 🟢 OPTYMALNA |
| `3p-oficjum-kabala-gildia` | 5.25 🟢 | 0.0% 🟢 | 2.6% 🟢 | 1.4 🟢 | 5.54 🔴 | 3.27zł | 9.0 | 🟢 OPTYMALNA |
| `3p-oficjum-korona-gildia` | 5.62 🟢 | 0.0% 🟢 | 8.3% 🟢 | 1.53 🟢 | 5.7 🔴 | 3.33zł | 9.4 | 🟢 OPTYMALNA |
| `3p-oficjum-korona-kabala` | 5.53 🟢 | 0.0% 🟢 | 8.5% 🟢 | 1.5 🟢 | 4.61 🟡 | 2.44zł | 8.67 | 🟢 OPTYMALNA |
| `4p-core` | 5.91 🟢 | 0.1% 🟢 | 6.0% 🟢 | 1.64 🟢 | 6.17 🔴 | 6.98zł | 8.13 | 🟢 OPTYMALNA |
| `4p-no-cienie` | 5.53 🟢 | 0.0% 🟢 | 7.0% 🟢 | 1.5 🟢 | 6.15 🔴 | 2.93zł | 8.64 | 🟢 OPTYMALNA |
| `4p-no-kabala` | 5.72 🟢 | 0.0% 🟢 | 5.5% 🟢 | 1.57 🟢 | 6.38 🔴 | 7.47zł | 8.5 | 🟢 OPTYMALNA |
| `4p-no-korona` | 5.48 🟢 | 0.0% 🟢 | 1.5% 🟢 | 1.54 🟢 | 6.22 🔴 | 7.34zł | 8.34 | 🟢 OPTYMALNA |
| `4p-no-oficjum` | 5.55 🟢 | 0.0% 🟢 | 4.7% 🟢 | 1.0 🟢 | 5.42 🔴 | 7.1zł | 7.93 | 🟢 OPTYMALNA |
| `5p-full` | 4.98 🟡 | 0.0% 🟢 | 4.6% 🟢 | 1.36 🟢 | 5.43 🔴 | 5.86zł | 7.81 | ⚠️ WARTOŚCI BRZEGOWE |

## 3. Witalność Mechanik Frakcji (Mechanic Vitality & Degeneration Gate)

| Setup | Status Witalności | Kara | Zidentyfikowane Ostrzeżenia / Degradacje Mechanik |
| :--- | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | ⚠️ Ostrzeżenie Witalności | 0.590 | Przedwczesne Zwycięstwa (Era 1-2): 0.6% gier (>0.5%), Ekstremalny Deadlock (Era 10+): 2.2% gier (>1.0%) |
| `3p-cienie-korona-gildia` | ⚠️ Ostrzeżenie Witalności | 0.540 | Ekstremalny Deadlock (Era 10+): 2.7% gier (>1.0%) |
| `3p-cienie-korona-kabala` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 2.820 | Ekstremalny Deadlock (Era 10+): 14.1% gier (>1.0%) |
| `3p-korona-kabala-gildia` | ⚠️ Ostrzeżenie Witalności | 0.320 | Ekstremalny Deadlock (Era 10+): 1.6% gier (>1.0%) |
| `3p-oficjum-alandalus-gildia` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 2.000 | Przedwczesne Zwycięstwa (Era 1-2): 1.2% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 8.8% gier (>6.0%), Ekstremalny Deadlock (Era 10+): 1.1% gier (>1.0%), Martwa ścieżka stosy (swiete-oficjum): 9/691 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-alandalus-kabala` | ⚠️ Ostrzeżenie Witalności | 1.560 | Ekstremalny Deadlock (Era 10+): 1.8% gier (>1.0%), Martwa ścieżka stosy (swiete-oficjum): 13/601 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-alandalus-korona` | ⚠️ Ostrzeżenie Witalności | 1.975 | Przedwczesne Zwycięstwa (Era 1-2): 0.7% gier (>0.5%), Ekstremalny Deadlock (Era 10+): 3.0% gier (>1.0%), Martwa ścieżka stosy (swiete-oficjum): 10/537 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-kabala-gildia` | ⚠️ Ostrzeżenie Witalności | 1.360 | Zbyt Wczesne Zakończenia (Era 1-3): 7.6% gier (>6.0%), Martwa ścieżka stosy (swiete-oficjum): 0/852 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-korona-gildia` | ⚠️ Ostrzeżenie Witalności | 1.200 | Martwa ścieżka stosy (swiete-oficjum): 3/670 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-korona-kabala` | ⚠️ Ostrzeżenie Witalności | 1.200 | Martwa ścieżka stosy (swiete-oficjum): 1/614 wygranych (<8%) — gra tylko skazania |
| `4p-core` | ⚠️ Ostrzeżenie Witalności | 0.560 | Ekstremalny Deadlock (Era 10+): 2.8% gier (>1.0%) |
| `4p-no-cienie` | ⚠️ Ostrzeżenie Witalności | 1.200 | Martwa ścieżka stosy (swiete-oficjum): 19/313 wygranych (<8%) — gra tylko skazania |
| `4p-no-kabala` | ⚠️ Ostrzeżenie Witalności | 0.220 | Przedwczesne Zwycięstwa (Era 1-2): 0.8% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.2% gier (>6.0%) |
| `4p-no-korona` | ⚠️ Ostrzeżenie Witalności | 1.635 | Przedwczesne Zwycięstwa (Era 1-2): 1.7% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.1% gier (>6.0%), Martwa ścieżka stosy (swiete-oficjum): 12/318 wygranych (<8%) — gra tylko skazania |
| `4p-no-oficjum` | ⚠️ Ostrzeżenie Witalności | 0.310 | Przedwczesne Zwycięstwa (Era 1-2): 1.0% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 6.6% gier (>6.0%) |
| `5p-full` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 2.032 | Przedwczesne Zwycięstwa (Era 1-2): 1.1% gier (>0.5%), Zbyt Wczesne Zakończenia (Era 1-3): 11.3% gier (>6.0%), Zbyt Krótka Średnia Rozgrywka 4.98 Er (<5.0 Er), Martwa ścieżka stosy (swiete-oficjum): 9/419 wygranych (<8%) — gra tylko skazania |

## 4. Rozkład Długości Partii i Zwycięstw Frakcji według Er

### 4.1. Ogólny Rozkład Końca Partii według Er (Wszystkie Symulowane Gry)

| Era Końca Gry | Liczba Gier | Udział % | Wizualizacja Rozkładu | Ocena Tempa Gry |
| :---: | :---: | :---: | :--- | :--- |
| **Era 2** | 95 |   0.6% | `                    ` | 🔴 Ekstremalnie wczesna (sprint / anomalia) |
| **Era 3** | 788 |   4.9% | `██                  ` | 🟡 Wczesna / Szybka gra |
| **Era 4** | 2,584 |  16.2% | `████████            ` | 🟡 Wczesna / Szybka gra |
| **Era 5** | 3,774 |  23.6% | `████████████        ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 6** | 4,100 |  25.6% | `█████████████       ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 7** | 2,258 |  14.1% | `███████             ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 8** | 1,543 |   9.6% | `█████               ` | 🟡 Przedłużona / Późna gra |
| **Era 9** | 540 |   3.4% | `██                  ` | 🟡 Przedłużona / Późna gra |
| **Era 10** | 194 |   1.2% | `█                   ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 11** | 71 |   0.4% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 12** | 34 |   0.2% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 13** | 13 |   0.1% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 14** | 6 |   0.0% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |

### 4.2. Rozkład Zwycięstw Frakcji według Er (Liczba Wygranych Partii)

| Era Końca Gry | Gry w Erze | SO (wygrane) | CAA (wygrane) | KB (wygrane) | KT (wygrane) | GC (wygrane) | Dominująca Frakcja w tej Erze |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| **Era 2** | 95 | 3 | 84 | 0 | 8 | 0 | **CAA (84)** |
| **Era 3** | 788 | 217 | 275 | 186 | 110 | 0 | **CAA (275)** |
| **Era 4** | 2,584 | 1,199 | 649 | 265 | 424 | 47 | **SO (1,199)** |
| **Era 5** | 3,774 | 1,724 | 446 | 768 | 569 | 267 | **SO (1,724)** |
| **Era 6** | 4,100 | 1,063 | 951 | 1,027 | 515 | 544 | **SO (1,063)** |
| **Era 7** | 2,258 | 770 | 220 | 277 | 360 | 631 | **SO (770)** |
| **Era 8** | 1,543 | 315 | 84 | 240 | 224 | 680 | **GC (680)** |
| **Era 9** | 540 | 146 | 31 | 83 | 78 | 202 | **GC (202)** |
| **Era 10** | 194 | 46 | 17 | 40 | 42 | 49 | **GC (49)** |
| **Era 11** | 71 | 11 | 8 | 31 | 13 | 8 | **KB (31)** |
| **Era 12** | 34 | 3 | 2 | 10 | 16 | 3 | **KT (16)** |
| **Era 13** | 13 | 1 | 1 | 6 | 5 | 0 | **KB (6)** |
| **Era 14** | 6 | 1 | 1 | 2 | 2 | 0 | **KB (2)** |
| **SUMA** | **16,000** | **5,499** | **2,769** | **2,935** | **2,366** | **2,431** | **Łącznie: 100.0%** |

### 4.3. Rozkład Er w Kanonie 4P (5 Głównych Setupów)

| Setup 4P | Śr. Er | Ery 1–2 (Sprint) % | Ery 3–4 (Wczesne) % | Ery 5–7 (Złote Okno) % | Ery 8–9 (Późne) % | Ery 10+ (Deadlock) % | Główny Zwycięzca w Erze 6 |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `4p-core` | **5.91** |  0.4% | 19.8% | 64.1% | 12.9% |  2.8% | **KB (36.8%)** |
| `4p-no-cienie` | **5.53** |  0.0% | 21.1% | 70.8% |  8.1% |  0.0% | **KB (30.6%)** |
| `4p-no-kabala` | **5.72** |  0.8% | 21.1% | 66.7% | 10.9% |  0.5% | **KB (39.9%)** |
| `4p-no-korona` | **5.48** |  1.7% | 27.3% | 60.8% | 10.1% |  0.1% | **CAA (30.0%)** |
| `4p-no-oficjum` | **5.55** |  1.0% | 19.5% | 71.7% |  7.6% |  0.2% | **KB (44.3%)** |